--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
     "vue": "^3.0.0",
+    "vue-component-id": "^0.2.1",
     "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
